<resources>
    <string name="app_name">Messenger</string>
    <string name="api_key" translatable="false">jyg7rvbp6m42</string>

    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="phone">Phone</string>

    <string name="please_wait">Please wait</string>
    <string name="sign_in">Sign In</string>

    <string name="set_your_avatar">Set your avatar</string>

    <string name="contacts_not_found">Contacts not found</string>

    <string name="get_sms_code">Get sms code</string>
    <string name="sms_code">sms code</string>
    <string name="confirm">Confirm</string>
    <string name="skip">Skip</string>
    <string name="link_your_account_with_phone">Link your account with phone</string>
    <string name="timeout_finished">Timeout finished</string>

    <string name="sign_in_error">Some error occurred</string>

    <string name="delete_message">Delete message</string>

    <string name="was_online">Was online</string>

    <string name="add_to_contacts">Add to contacts</string>

    <string name="channels">Channels</string>
    <string name="contacts">Contacts</string>
    <string name="groups">Groups</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="user_updated_successfully">User updated successfully</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="logout_successfully">Logout is successfully</string>
    <string name="logout_question">Logout?</string>

    <string name="dismiss">Dismiss</string>

    <string name="search">Search</string>


    <string name="delete_channel_dialog_title">Delete channel?</string>
    <string name="delete_channel_dialog_text">Do you want to delete this channel?</string>
    <string name="delete_channel_confirm">Delete</string>

    <string name="small_length_validation">* %s should contain at less %d characters</string>
    <string name="password_no_numbers_validation">* Password should contain numbers</string>
    <string name="password_same_case_validation">* Password should contain different letter cases</string>
    <string name="email_validation">* Wrong email sheme</string>

    <string name="user_already_exists_exception">User with this name is already exists. Try again</string>

    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign up</string>

    <string name="sign_in_button_text">I don\'t have an account yet</string>
    <string name="sign_up_button_text">I already have an account</string>
    <string name="apply_changes">Apply changes</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>

    <string name="edit_profile">Edit profile</string>
    <string name="users">Users</string>

    <string name="wrong_credentials_message">User does not exist. Check your username or password</string>

</resources>